Fix spacing of card index item icons

--- a/app/assets/stylesheets/card_index.css
+++ b/app/assets/stylesheets/card_index.css
@@ -75,6 +75,22 @@
     display: flex;
 }
 
+.card-icons>div {
+    margin-right: 12px;
+}
+
 .card-icons span {
     font-size: 16px;
+}
+
+.comment-icon {
+    display: flex
+}
+
+.comment-icon span {
+    margin-right: 3px;
+}
+
+.comment-icon div {
+    font-size: 14px;
 }
